[gd_scene load_steps=18 format=2]

[ext_resource path="res://src/play_session/intermission.gd" type="Script" id=1]
[ext_resource path="res://graphics/level_up_spritesheet.png" type="Texture" id=2]
[ext_resource path="res://audio/tada-fanfare-a-6313.wav" type="AudioStream" id=3]
[ext_resource path="res://audio/tat-tat-92592.wav" type="AudioStream" id=4]
[ext_resource path="res://graphics/game_over_spritesheet.png" type="Texture" id=5]
[ext_resource path="res://graphics/speed_up_spritesheet.png" type="Texture" id=6]
[ext_resource path="res://audio/failfare-86009.wav" type="AudioStream" id=7]
[ext_resource path="res://src/play_session/life.gd" type="Script" id=8]
[ext_resource path="res://graphics/icon.png" type="Texture" id=9]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 512, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 512, 0, 512, 128 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 512, 128 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 6 )
region = Rect2( 512, 0, 512, 128 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "level_up",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "speed_up",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 512, 256 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 5 )
region = Rect2( 512, 0, 512, 256 )

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Intermission" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 3.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -195.0
margin_right = 195.0
margin_bottom = 600.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 390.0
margin_bottom = 64.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 94.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer"]
margin_right = 94.0
margin_bottom = 64.0
texture = ExtResource( 9 )
stretch_mode = 6
script = ExtResource( 8 )

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 193.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer2"]
margin_right = 95.0
margin_bottom = 64.0
texture = ExtResource( 9 )
stretch_mode = 6
script = ExtResource( 8 )
index = 1

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 197.0
margin_right = 291.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer3"]
margin_right = 94.0
margin_bottom = 64.0
texture = ExtResource( 9 )
stretch_mode = 6
script = ExtResource( 8 )
index = 2

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 295.0
margin_right = 390.0
margin_bottom = 64.0
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/HBoxContainer/MarginContainer4"]
margin_right = 95.0
margin_bottom = 64.0
texture = ExtResource( 9 )
stretch_mode = 6
script = ExtResource( 8 )
index = 3

[node name="ScoreDisplay" type="RichTextLabel" parent="."]
margin_left = 317.0
margin_top = 68.0
margin_right = 707.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Score: 000"

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="StatusUp" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 528, 248 )
frames = SubResource( 5 )
animation = "level_up"
playing = true

[node name="GameOver" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 518, 279 )
frames = SubResource( 8 )
speed_scale = 0.5
playing = true

[node name="SuccessSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 518, 279 )
stream = ExtResource( 3 )
bus = "Session"

[node name="FailureSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 518, 279 )
stream = ExtResource( 7 )
bus = "Session"

[node name="StartSFX" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 518, 279 )
stream = ExtResource( 4 )
bus = "Session"

[connection signal="timeout" from="Timer" to="." method="on_Timer_timeout"]
[connection signal="finished" from="SuccessSFX" to="." method="start_timer"]
[connection signal="finished" from="FailureSFX" to="." method="start_timer"]
